Fix: Restaurar estilos corruptos y forzar modo claro en Home Page

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,6 +11,7 @@
     <!-- PWA -->
     <link rel="manifest" href="/manifest.json">
     <meta name="theme-color" content="#2D5016">
+    <meta name="color-scheme" content="light">
     <link rel="apple-touch-icon" href="/icons/icon-192x192.png">
 
     <!-- Fonts -->
