--- a/frontend/pages/dashboard.html
+++ b/frontend/pages/dashboard.html
@@ -1478,6 +1478,52 @@
       }
     }
 
+    /* Toast Notifications */
+    .toast-container {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      z-index: 10000;
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+    }
+
+    .toast {
+      background: var(--bg-card);
+      color: var(--text-primary);
+      padding: 1rem 1.5rem;
+      border-radius: 12px;
+      box-shadow: var(--shadow-lg);
+      display: flex;
+      align-items: center;
+      gap: 0.75rem;
+      min-width: 300px;
+      border-left: 4px solid var(--primary-main);
+      animation: fadeInUp 0.3s ease forwards;
+    }
+
+    .toast-success {
+      border-left-color: var(--success);
+    }
+
+    .toast-error {
+      border-left-color: var(--error);
+    }
+
+    .toast-info {
+      border-left-color: var(--info);
+    }
+
+    .toast-icon {
+      font-size: 1.25rem;
+    }
+
+    .toast-message {
+      font-size: 0.95rem;
+      font-weight: 500;
+    }
+
     /* Scrollbar */
     ::-webkit-scrollbar {
       width: 8px;
